configure.ac: Require 0.9.
Original commit message from CVS:
* configure.ac:
Require 0.9.
* ext/ffmpeg/Makefile.am:
* ext/ffmpeg/gstffmpeg.c: (plugin_init):
Disable protocol, demux, mux, enc.
* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),
(gst_ffmpegdec_init), (gst_ffmpegdec_setcaps),
(gst_ffmpegdec_negotiate), (gst_ffmpegdec_frame),
(gst_ffmpegdec_sink_event), (gst_ffmpegdec_chain),
(gst_ffmpegdec_register):
Port to 0.9.

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -3,12 +3,12 @@ plugin_LTLIBRARIES = libgstffmpeg.la
 
 libgstffmpeg_la_SOURCES = gstffmpeg.c 		\
 			  gstffmpegcodecmap.c	\
-			  gstffmpegdec.c 	\
-			  gstffmpegdemux.c 	\
-			  gstffmpegenc.c 	\
-			  gstffmpegmux.c 	\
-			  gstffmpegprotocol.c	\
-			  gstffmpegcolorspace.c
+			  gstffmpegdec.c 
+#			  gstffmpegdemux.c 	\
+#			  gstffmpegenc.c 	\
+#			  gstffmpegmux.c 	\
+#			  gstffmpegprotocol.c	\
+#			  gstffmpegcolorspace.c
 
 libgstffmpeg_la_CFLAGS = $(GST_CFLAGS) \
 	-I $(top_srcdir)/gst-libs/ext/ffmpeg/libavformat \
