ext/ffmpeg/: Some more porting.
Original commit message from CVS:
* ext/ffmpeg/Makefile.am:
* ext/ffmpeg/gstffmpeg.c: (plugin_init):
* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_query),
(gst_ffmpegdec_event), (gst_ffmpegdec_open),
(gst_ffmpegdec_setcaps), (gst_ffmpegdec_chain),
(gst_ffmpegdec_change_state):
* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
(gst_ffmpegenc_init), (gst_ffmpegenc_getcaps),
(gst_ffmpegenc_setcaps), (gst_ffmpegenc_chain_video),
(gst_ffmpegenc_chain_audio):
Some more porting.
Make the encoders compile, they don't seem to work yet
though.

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -3,9 +3,9 @@ plugin_LTLIBRARIES = libgstffmpeg.la
 
 libgstffmpeg_la_SOURCES = gstffmpeg.c 		\
 			  gstffmpegcodecmap.c	\
-			  gstffmpegdec.c 
+			  gstffmpegdec.c 	\
+			  gstffmpegenc.c 	
 #			  gstffmpegdemux.c 	\
-#			  gstffmpegenc.c 	\
 #			  gstffmpegmux.c 	\
 #			  gstffmpegprotocol.c	\
 #			  gstffmpegcolorspace.c
