Initial patch of the new mirror-less build-system for gst-ffmpeg using specific revisions of ffmpeg svn instead.
Original commit message from CVS:
* Makefile.am:
* autogen.sh:
* configure.ac:
* ext/ffmpeg/Makefile.am:
* ffmpegrev:
* gst-libs/ext/Makefile.am:
Initial patch of the new mirror-less build-system for gst-ffmpeg using
specific revisions of ffmpeg svn instead.
Might still have some issues, we need people to try this.
Help by : Dejan Sakelšak  <sakdean at gmail dot com>
* ext/ffmpeg/gstffmpeg.c: (plugin_init):
* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
(gst_ffmpeg_caps_with_codecid), (gst_ffmpeg_caps_to_codecid),
(gst_ffmpeg_get_codecid_longname):
* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
(gst_ffmpegdec_get_buffer), (gst_ffmpegdec_audio_frame),
(gst_ffmpegdec_register):
* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_averror),
(gst_ffmpegdemux_register):
* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_register):
* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_register):
Update code for new ffmpeg API.

--- a/ext/ffmpeg/Makefile.am
+++ b/ext/ffmpeg/Makefile.am
@@ -8,8 +8,9 @@ libgstffmpeg_la_SOURCES = gstffmpeg.c	\
 			  gstffmpegcfg.c	\
 			  gstffmpegdemux.c	\
 			  gstffmpegmux.c    \
-			  gstffmpegdeinterlace.c	\
-			  gstffmpegscale.c
+			  gstffmpegdeinterlace.c
+# 	\
+# 			  gstffmpegscale.c
 
 libgstffmpeg_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
 	$(FFMPEG_CFLAGS)
